<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Name"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/businessNumber"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="Business Number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/provinces"
        android:prompt="@string/province_prompt"
        android:spinnerMode="dialog"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textProv" />

    <Spinner
        android:id="@+id/business"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/businesses"
        android:prompt="@string/business_prompt"
        android:spinnerMode="dialog"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textBus"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textProv"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Province/Territory:"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/textBus"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Primary Business:"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/province" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Business"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/business" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Business"
        android:onClick="eraseContact"
        app:layout_constraintLeft_toRightOf="@+id/updateButton"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/business" />


</android.support.constraint.ConstraintLayout>